# movie-picture-pipeline

.github/workflows/: backend-cd.yml  backend-ci.yml  frontend-cd.yml  frontend-ci.yml
backend/: Pipfile  pyproject.toml  setup.py
backend/k8s/: deployment.yaml
frontend/k8s/: deployment.yaml
