[project]
name = "backend"
version = "0.0.1"
authors = [
  { name="HuanNN4", email="HuanNN4@example.com" },
]
description = "Backend movie picture pipeline"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.packages.find]
where = [""]